Complete file manager components

--- a/frontend/src/app/features/pages/apps/file-manager/media/media.component.html
+++ b/frontend/src/app/features/pages/apps/file-manager/media/media.component.html
@@ -2,11 +2,7 @@
     <div class="col-span-12 xl:col-span-12">
         <app-card>
             <div class="flex justify-between items-center">
-                <h4 class="text-primary-900 font-headingFontFamily font-bold text-lg">Templates</h4>
-                <c-button>
-                    <i class="pi pi-plus text-xs mr-2"></i>
-                    <span class="text-sm">Create Folder</span>
-                </c-button>
+                <h4 class="text-primary-900 font-headingFontFamily font-bold text-lg">Media</h4>
             </div>
             <app-file-list [files]="filesList"></app-file-list>
         </app-card>
