Add css for overlay popup

--- a/frontend/src/app/shared/components/layouts/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/shared/components/layouts/components/user-profile/user-profile.component.html
@@ -1,1 +1,19 @@
-<p>user-profile works!</p>
+<div class="flex justify-center items-center cursor-pointer" (click)="op.toggle($event)">
+    <div>
+        <img src="/assets/images/avatars/hbsoft.jpg" class="w-9 h-9 mr-2 rounded-full" alt="hossein">
+    </div>
+    <div>
+        <p class="text-sm text-primary-500 -mb-1">Admin</p>
+        <div class="flex justify-center items-center">
+            <h4 class="font-semibold text-primary-900 text-base mr-2">Mr Bajan</h4>
+            <img src="/assets/icons/menus/chevron-line-down.svg" class="w-4 h-4" alt="arrow">
+        </div>
+    </div>
+
+    <p-overlayPanel #op>
+        <ng-template pTemplate="content">
+            <h4>Custom Content</h4>
+        </ng-template>
+    </p-overlayPanel>
+
+</div>
