--- a/frontend/src/assets/scss/_ngprime-custom.scss
+++ b/frontend/src/assets/scss/_ngprime-custom.scss
@@ -5,12 +5,12 @@
         @apply bg-white text-primary-900 shadow-md rounded-md p-4 border-t border-gray-50;
 
         .p-menuitem {
-            @apply py-2;
+            // @apply py-2;
 
             .p-menuitem-content {
 
                 .p-menuitem-link {
-                    @apply text-sm;
+                    @apply text-sm py-2;
 
                     .p-menuitem-icon {
                         @apply mr-2;
@@ -256,6 +256,16 @@
 
     .p-tooltip-arrow {
         @apply border-b-[#4b5563] top-0 left-1/2 -ml-1 border-t-0 border-b-[.25rem] border-x-[.25rem];
+    }
+}
+
+.p-overlaypanel {
+    @apply bg-white text-primary-900 rounded-md shadow-md border-t-gray-50 border-t-2;
+    @apply after:border-8 after:-ml-2 after:border-solid after:border-white after:border-b-white after:border-transparent;
+    @apply before:border-[10px] before:-ml-[10px] before:border-solid before:border-white before:border-b-[#f2f2f2] before:border-transparent;
+
+    .p-overlaypanel-content {
+        @apply p-5;
     }
 }
 
