Complete emails overlay and notifications overlay

--- a/frontend/src/app/shared/components/layouts/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/shared/components/layouts/components/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center cursor-pointer" (click)="op.toggle($event)">
+<div class="flex justify-center items-center cursor-pointer mr-4" (click)="op.toggle($event)">
     <div>
         <img src="/assets/images/avatars/hbsoft.jpg" class="w-9 h-9 mr-2 rounded-full" alt="hossein">
     </div>
