--- a/frontend/src/assets/scss/_ngprime-custom.scss
+++ b/frontend/src/assets/scss/_ngprime-custom.scss
@@ -265,7 +265,7 @@
     @apply before:border-[10px] before:-ml-[10px] before:border-solid before:border-white before:border-b-[#f2f2f2] before:border-transparent;
 
     .p-overlaypanel-content {
-        @apply p-5;
+        // @apply p-5;
     }
 }
 
