--- a/frontend/src/app/shared/components/layouts/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/shared/components/layouts/components/user-profile/user-profile.component.html
@@ -3,16 +3,19 @@
         <img src="/assets/images/avatars/hbsoft.jpg" class="w-9 h-9 mr-2 rounded-full" alt="hossein">
     </div>
     <div>
-        <p class="text-sm text-primary-500 -mb-1">Admin</p>
+        <!-- <p class="text-sm text-primary-500 -mb-1">Admin</p> -->
         <div class="flex justify-center items-center">
-            <h4 class="font-semibold text-primary-900 text-base mr-2">Mr Bajan</h4>
+            <!-- <h4 class="font-semibold text-primary-900 text-base mr-2">Mr Bajan</h4> -->
             <img src="/assets/icons/menus/chevron-line-down.svg" class="w-4 h-4" alt="arrow">
         </div>
     </div>
 
     <p-overlayPanel #op>
         <ng-template pTemplate="content">
-            <h4>Custom Content</h4>
+            <div class="p-4">
+                <h4>Hossein Bajan</h4>
+                <p>Admin</p>
+            </div>
         </ng-template>
     </p-overlayPanel>
 
