--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,7 +1,10 @@
-<nav class="fixed top-0 left-0 h-full w-[260px] shadow-sm">
-    <a class="flex items-center justify-between py-4 px-4 bg-white" routerLink="/">
-        <img class="h-[2.9rem]" src="/assets/images/logo-type.svg" alt="logo">
-        <!-- <img class="h-8" src="/assets/icons/arrow-square-left.svg" alt="arrow-square-left"> -->
+<nav class="sidebar">
+    <a class="flex items-center py-4 px-4 bg-white" routerLink="/">
+        <img class="h-10" src="/assets/images/hb.svg" alt="logo">
+        <div>
+            <h3 class="text-[1.3rem] text-primary-500 font-extrabold -mb-[1.55rem] -ml-[0.4rem]">BSOFT</h3>
+            <!-- <p class="text-[0.775rem] tracking-widest text-gray-400 font-normal">Admin Panel</p> -->
+        </div>
     </a>
     <!-- end logo and logo type -->
 
