--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,9 +1,8 @@
-<nav class="sidebar">
-    <a class="flex items-center py-4 px-4 bg-white" routerLink="/">
+<nav [class]="sidebarClass">
+    <a class="logo-wrapper" routerLink="/">
         <img class="h-10" src="/assets/images/hb.svg" alt="logo">
-        <div>
+        <div class="logo-text">
             <h3 class="text-[1.3rem] text-primary-500 font-extrabold -mb-[1.55rem] -ml-[0.4rem]">BSOFT</h3>
-            <!-- <p class="text-[0.775rem] tracking-widest text-gray-400 font-normal">Admin Panel</p> -->
         </div>
     </a>
     <!-- end logo and logo type -->
