--- a/frontend/src/app/shared/components/layouts/top-nav/top-nav.component.html
+++ b/frontend/src/app/shared/components/layouts/top-nav/top-nav.component.html
@@ -4,7 +4,7 @@
         <div class="flex justify-between items-center">
             <div class="flex items-center">
                 <div class="mr-2">
-                    <button
+                    <button (click)="toggleCollapse()"
                         class="bg-gray-100 border-none rounded-full flex duration-200 transition-all hover:bg-gray-200 justify-center items-center w-10 h-10">
                         <img src="/assets/icons/menus/dash-s.svg" class="w-5" alt="dashboard">
                     </button>
