--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/e-state-box/e-state-box.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/e-state-box/e-state-box.component.html
@@ -13,7 +13,7 @@
         <div class="flex items-center mt-6">
             <img [src]="state? '/assets/icons/trend-up.svg':'/assets/icons/trend-down.svg'" class="w-5 h-5" alt="trend">
             <div>
-                <span class="font-fontFamily font-semibold text-[15px] mx-1.5"
+                <span class="font-fontFamily font-bold text-[15px] mx-1.5"
                     [ngClass]="state? 'text-green':'text-red'">{{percentage}}</span>
             </div>
             <p class="text-primary-900 text-[15px] font-medium">Up from past week</p>
