--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 // Customize ng prime components
 @import "primeicons/primeicons.css";
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 
 @layer tailwind-base, primeng, tailwind-utilities;
 
@@ -13,10 +14,6 @@
     @tailwind utilities;
 }
 
-// @layer primeng {
-    // @import "primeng/resources/themes/lara-light-blue/theme.css";
-    // @import "primeng/resources/primeng.css";
-// }
 
 @import "assets/scss/fonts";
 
