Improve menu icons

--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
@@ -12,7 +12,7 @@
             @apply flex items-center;
 
             .menu-icon {
-                @apply w-5 h-5 mr-2;
+                @apply w-[1.15rem] h-[1.15rem] mr-2;
             }
 
             .menu-text {
