--- a/frontend/src/app/features/pages/email/read-email/read-email.component.html
+++ b/frontend/src/app/features/pages/email/read-email/read-email.component.html
@@ -1,1 +1,65 @@
-<p>read-email works!</p>
+<div class="mb-4">
+    <div class="grid grid-cols-12 gap-4 mb-4">
+        <div class="col-span-12 xl:col-span-12">
+            <app-card>
+                <div class="flex justify-between items-center mb-4">
+                    <h4 class="text-primary-900 font-headingFontFamily font-bold text-lg">You can now use your storage
+                        in Google Drive – Hey Nicklas!</h4>
+                    <div class="flex justify-between items-center">
+                        <c-button icon="pi-print" class="mx-1"></c-button>
+                        <c-button icon="pi-info-circle" class="mx-1"></c-button>
+                        <c-button icon="pi-trash" class="mx-1"></c-button>
+                        <c-button icon="pi-copy" class="mx-1"></c-button>
+                        <c-button icon="pi-ellipsis-v" class="mx-1"></c-button>
+                    </div>
+                </div>
+                <div>
+                    <div class="flex items-center mb-4">
+                        <img class="w-[45px] h-[45px] mr-4 rounded-full" src="/assets/images/avatars/hbsoft.jpg"
+                            alt=" hossein">
+                        <div>
+                            <p class="font-headingFontFamily text-primary-900 text-base font-semibold">Hossein Bajan
+                            </p>
+                            <p class="text-gray-400 text-[15px]">{{'From: john@domain.com'}}</p>
+                        </div>
+                    </div>
+                    <hr class="my-3">
+
+                    <div class="mail-container">
+                        <h5 class="font-semibold mb-3">Hi Coderthemes!</h5>
+                        <p>Last pic over my village – Yeah i'd like that! Do you remember the video som..</p>
+                        <p>Praesent dui ex, dapibus eget mauris ut, finibus vestibulum enim. Quisque arcu leo, facilisis
+                            in fringilla id, luctus in tortor. Nunc vestibulum est quis orci varius viverra. Curabitur
+                            dictum volutpat massa vulputate molestie. In at felis ac velit maximus convallis.</p>
+                        <p>Sed elementum turpis eu lorem interdum, sed porttitor eros commodo. Nam eu venenatis tortor,
+                            id lacinia diam. Sed aliquam in dui et porta. Sed bibendum orci non tincidunt ultrices.
+                            Vivamus fringilla, mi lacinia dapibus condimentum, ipsum urna lacinia lacus, vel tincidunt
+                            mi nibh sit amet lorem.</p>
+
+                        <h4 class="font-extrabold mb-3 text-xl text-primary-900">Checklists/Sub-tasks</h4>
+                        <ol>
+                            <li>Your design preferences (Color, style, shapes, Fonts, others)</li>
+                            <li>Tell me, why is your item different?</li>
+                            <li>Do you want to bring up a specific feature of your item? If yes, please tell me</li>
+                            <li>Do you have any preference or specific thing you would like to change or improve on your item page?</li>
+                            <li>Do you want to include your item's or your provider's logo on the page? if yes, please send it to me in vector format (Ai or EPS)</li>
+                            <li>Please provide me with the copy or text to display</li>
+                        </ol>
+                        <p>Filling in this form with the above information will ensure that they will be able to start work quickly.</p>
+                        <p>You can complete your order by putting your coupon code into the Promotional code box and clicking ‘Apply Coupon’.</p>
+                    </div>
+
+                    <div>
+                        <hr class="my-3">
+                        <div class="flex justify-end">
+                            <c-button label="Reply" class="mr-2" severity="secondary">
+                            </c-button>
+                            <c-button label="Forward">
+                            </c-button>
+                        </div>
+                    </div>
+                </div>
+            </app-card>
+        </div>
+    </div>
+</div>
