--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
@@ -6,7 +6,7 @@
     }
 
     &_item {
-        @apply flex justify-between items-center p-3 px-3 rounded-md m-2;
+        @apply flex justify-between items-center p-3 px-3 rounded-md my-1 mx-2;
 
         &--title {
             @apply flex items-center;
