--- a/frontend/src/assets/scss/_custom.scss
+++ b/frontend/src/assets/scss/_custom.scss
@@ -31,11 +31,19 @@ strong {
 }
 
 .primary-btn {
-    @apply bg-primary-500 py-3 text-white font-semibold rounded-md px-4 duration-200 transition-all hover:bg-primary-600;
+    @apply bg-primary-500 py-3 text-white font-semibold rounded-md px-5 duration-200 transition-all hover:bg-primary-600;
+}
+
+.secondary-btn {
+    @apply bg-gray-200 py-3 text-gray-700 font-semibold rounded-md px-5 duration-200 transition-all hover:bg-gray-300;
 }
 
 .primary-btn-icon-rounded {
     @apply rounded-full text-primary-700 font-bold text-xl;
+}
+
+.btn-icon-semi-rounded {
+    @apply w-9 h-9 text-gray-600 rounded-md bg-white border-gray-200 border duration-200 transition-all hover:bg-slate-100 text-sm;
 }
 
 .collapsed-sidebar {
